# generate-docs

./: .gitignore  Fake DBT docs with Mark.txt  README.md  pyproject.toml  warehouse-dependencies.xlsx
src/dbt-template/: dbt_project.yml
src/generate_docs/: generate_docs.py
src/graphdoc/: profiles.yml
