[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "generate-docs"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    'dbt-duckdb',
    'openpyxl'
]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[project.scripts]
generate_docs = "generate_docs.generate_docs:command_line"
